styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
  background: url(./assets/background.jpg);
  background-position: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  padding-bottom: 1rem;
}

.logoArea {
  padding: 3rem;
  width: 100%;
  background: linear-gradient(to top, transparent 0%, black 100%);
  height: 5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  animation: fromTop 0.5s 0.2s backwards;
}

.searchArea {
  width: 70%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 3rem;
  animation: fromTop 0.5s 0.2s backwards;
  animation-delay: 0.4s;
}

input {
  width: 75%;
  padding: 1rem;
  border: none;
  border-top-left-radius: 30px;
  border-bottom-left-radius: 30px;
  font-family: "Roboto", sans-serif;
  font-size: 1.2rem;
}

#searchButton {
  width: 15%;
  padding: 1rem;
  border: none;
  border-top-right-radius: 30px;
  border-bottom-right-radius: 30px;
  cursor: pointer;
  background-color: #ec1d24;
  color: #fff;
  font-family: "Roboto", sans-serif;
  font-size: 1.2rem;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
}

#searchButton:hover,
.cardButton:hover,
#toDelivery:hover,
#minimizeButton:hover, #finishButton:hover, #returnButton:hover {
  box-shadow: 1px 1px 5px #424242;
  transition: all ease-in-out 500ms;
}

main {
  margin-top: 4rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#comicsGrid {
  display: grid;
  grid-template-columns: repeat(4, 16rem);
  gap: 3rem;
}

.card {
  border-radius: 10px;
  background: #fff;
  padding: 1.5rem;
  box-shadow: 5px 5px 20px #000;
  animation: fromCenter 0.5s;
}

.hqCover {
  height: 250px;
  width: 170px;
}

.buttonsWrapper {
  width: 100%;
  display: flex;
  flex-direction: row;
  gap: 1rem;
}

.cardButton {
  font-family: "Roboto", sans-serif;
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding: 0.3rem;
  width: 50%;
  border: none;
  border-radius: 5px;
  color: #fff;
  background: #ec1d24;
  cursor: pointer;
}

.cardButton img {
  height: 15px;
}

.card > div {
  height: 100%;
  display: flex;
  gap: 1rem;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.cart {
  background: #ec1d24;
  height: 4.5rem;
  width: 4.5rem;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;

  position: fixed;
  right: 20px;
  bottom: 20px;
  cursor: pointer;

  animation: fromCenter 1s;
}

.cart img {
  height: 30px;
}

.itemsCounter {
  display: none;
  justify-content: center;
  align-items: center;
  height: 1.5rem;
  width: 1.5rem;
  border-radius: 50%;
  position: absolute;
  top: 0;
  right: 0;
  background-color: #fefefe;
}

.comicModal,
.cartModal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.4);
  animation: fromTop 0.5s;
}

.modalContent {
  position: relative;
  background-color: #fefefe;
  margin: 15% auto;
  padding: 1.2rem;
  width: 60%;
  border-radius: 15px;
  max-width: 80rem;

  display: flex;
  flex-direction: row;
  gap: 1rem;
}

.modalContent > img {
  height: 30rem;
  max-width: 20rem;
}

.modalContent > div {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.modalContent ul {
  list-style: none;
}

.detailsCardButton {
  font-family: "Roboto", sans-serif;
  font-size: 1.2rem;
  position: absolute;
  bottom: 1.2rem;
  right: 1.2rem;
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding: 1rem;
  width: 30%;
  border: none;
  border-radius: 5px;
  color: #fff;
  background: #ec1d24;
  cursor: pointer;
}

.detailsCardButton img {
  width: 2rem;
}

.cartContent {
  background-color: #fefefe;
  margin: 15% auto;
  padding: 1.5rem;
  width: 40rem;
  height: 40rem;
  border-radius: 10px;
}

.cartOrders {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.cartOrders header {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

#minimizeButton {
  background-color: #ec1d24;
  padding: 0.5rem;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

#minimizeButton img {
  width: 2rem;
}

.cartOrders footer {
  display: flex;
  justify-content: flex-end;
}

.cartItems {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 1rem;
  overflow: auto;
}

.cartItem {
  padding: 1rem;
  width: 100%;
  border-radius: 10px;
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  gap: 1rem;
  background-color: #e9e9e9;
}

.itemImg {
  height: 10rem;
}

.cartItem button {
  justify-self: flex-end;
  height: 1.5rem;
  border: none;
  background-color: inherit;
  cursor: pointer;
}

.cartItem button img {
  width: 1.5rem;
}

#toDelivery {
  margin-top: 1rem;
  background-color: #ec1d24;
  padding: 1rem;
  border: none;
  color: #fff;
  font-size: 1.2rem;
  border-radius: 5px;
  cursor: pointer;
}

.addressPicking {
  height: 100%;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  gap: 1rem;
}

#map {
  height: 25rem;
  width: 100%;
}

.buttons {
  display: flex;
  gap: 1rem;
}

#finishButton, #returnButton {
  background-color: #ec1d24;
  padding: 1rem;
  border: none;
  color: #fff;
  font-size: 1.2rem;
  border-radius: 5px;
  cursor: pointer;
  width: 50%;
}

.finalArea {
  color: #ec1d24;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 3rem;
}

@keyframes fromTop {
  from {
    opacity: 0;
    transform: translateY(-30px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fromCenter {
  from {
    opacity: 0;
    transform: scale(0);
  }

  to {
    opacity: 1;
    transform: scale(1);
  }
}

